# reclaim

./: .env.example  .gitignore  AGENTS.md  BRANCHING_GUIDE.MD  CLAUDE.md  GEMINI.md  IMPROVEMENT.md  Makefile  README.md  compose.yml  docker-compose.production.yml  integration_plan.md  plan_autonomous_payout.md
backend/: .dockerignore  .env.example  Dockerfile  agent_workflows.md  create_demo_users.py  demo.html  main.py  pyproject.toml  requirements.txt  seed_demo_employees.py  seed_mock.py  seed_mock_data.py  seed_mock_policy.py  uv.Dockerfile  workflow3_update.md
backend/alembic/: env.py
backend/alembic/versions/: 1e338ce32d1e_normalize_schema.py  62328b82ed1f_merge_claim_drafts_and_normalize_schema_.py  a1b2c3d4e5f6_add_policy_section_embedding.py  add_auto_approval_budget.py  c7d8e9f0a1b2_add_user_code_to_employees.py  cb6ce2252fcc_add_payouts_notifications_and_banking_.py  d1e2f3a4b5c6_sync_reimbursements_schema.py  e2f3a4b5c6d7_add_claim_drafts_table.py  fbf2632e7f92_initial_migration.py
backend/api/: auth.py  departments.py  deps.py  documents.py  drafts.py  employee.py  notifications.py  payouts.py  policies.py  push.py  rate_limit.py  reimbursements.py  schemas.py  test_ui.py
backend/core/: config.py  database.md  database.py  enums.py  models.py  models_old.py  notification_store.py  push_service.py  security.py
backend/engine/: llm.py  progress.py
backend/seeds/: add_employee_bank_details.py  create_demo_users.py  seed_mock.py  seed_mock_policy.py
backend/test/: agent_workflows.md  demo.html
backend/tests/: test_llm_health.py
(+230 files in other folders)
