[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic==1.13.1",
    "asyncpg==0.30.0",
    "bcrypt==4.0.1",
    "boto3==1.42.91",
    "fastapi[standard]==0.129.1",
    "greenlet==3.1.1",
    "langchain==1.2.15",
    "langchain-core==1.3.0",
    "langchain-openai==1.1.14",
    "jinja2>=3.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.5,<1.2.0",
    "langsmith>=0.1.99",
    "passlib[bcrypt]==1.7.4",
    "pgvector==0.3.6",
    "pillow>=12.2.0",
    "psycopg2-binary==2.9.11",
    "pydantic==2.13.1",
    "pydantic-settings==2.13.1",
    "pymupdf4llm>=1.27.2.2",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.26",
    "sqlalchemy==2.0.36",
    "sqlmodel==0.0.22",
    "uvicorn==0.30.1",
    "slowapi>=0.1.9",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
